# py-linux-template

./: .gitignore  Dockerfile  Makefile  README.md  cheatsheet_unix_shell.md  config.yaml  pyproject.toml
config/: catalog.yaml  config.yaml  config_logger.yaml  config_logging.yaml  template.env
docs/: cheatsheet_linux_shell.md  docker_install.md  linux_set_up.md  project_structure.md
gdal_examples/: log_info.sh  metadata.txt
sample_project/: main.py
src/: __init__.py  config.py  decorators.py  logger.py  utils.py
test/: test-codestyle.py
tests/: test_config.py  test_config.yaml  test_logger.py  test_utils.py  utils.py
