[tool.poetry]
name = "py-linux-template"
version = "0.1.0"
description = "Template project for Python development in Linux."
authors = ["Willeke A'Campo (linux vdi) <willeke.acampo@nina.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.285"
pyment = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
